--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,9 @@
 }
 
 /* sharing effect */
+.text-white {
+  color: #fff;
+}
 
 /* separate effect */
 
@@ -14,10 +17,10 @@
 #header {
   background-color: #000;
   height: 46px;
-}
-
-#slider {
-  background-color: #ccc;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 #content {
