--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,11 +174,99 @@
 
 .modal-win {
   display: flex;
+  justify-content: center;
+  align-items: center;
 
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
-  background: #ccc;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.modal-container {
+  position: relative;
+  width: 900px;
+  max-width: calc(100% - 32px);
+  /* min-height: 200px; */
+  background-color: #fff;
+}
+
+.modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  font-size: 24px;
+  padding: 16px;
+  cursor: pointer;
+}
+
+.modal-close:hover {
+  background-color: red;
+}
+
+.modal-header {
+  background: #009688;
+  color: #fff;
+  height: 130px;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+}
+.modal-header .ti-bag {
+  margin-right: 15px;
+}
+
+.modal-body {
+  padding: 16px;
+  font-size: 15px;
+}
+
+.modal-label {
+  margin: 8px 0;
+}
+
+.modal-input {
+  display: block;
+  margin: 16px 0;
+  width: 100%;
+  height: 40px;
+  padding: 8px;
+}
+
+#buy-tickets {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 55px;
+  margin: 16px 0;
+  font-weight: 700;
+  background: #009688;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+#buy-tickets .ti-check {
+  font-weight: 900;
+  margin-left: 4px;
+}
+
+#buy-tickets:hover {
+  background-color: #ccc;
+  color: #000;
+  font-weight: 900;
+}
+.modal-footer {
+  text-align: right;
+  margin: 0px 15px 20px;
+}
+
+.modal-footer a {
+  color: #2196f3;
 }
